[metadata]
description-file = README.md

[flake8]
exclude = .tox,*.egg,build,venv,__pycache__,docs,dist,.git,deps
select = E,W,F
max-line-length = 88
# @TODO: for now, ignoring both line continuation before OR after binary
#        operators.  The pep8 style seems to have adopted the W504 style as
#        correct, which we've been doing conventionally but not 100% uniformly.
#        At some point in the future, we should remove W504 from this list and
#        conform all the continuation to be the same.
ignore=W503,W504
